a few bug fixes

--- a/template/index.html
+++ b/template/index.html
@@ -25,7 +25,7 @@
     <thead>
       <tr>
         <th><i class="fa fa-key"></i>ID</th>
-        <th><i class="fa fa-twitter"></i>label</th>
+        <th><i class="fa fa-twitter"></i>Current_Label</th>
         <th><i class="fa fa-tags"></i>Label</th>
       </tr>
     </thead>
